# controllers/hospitalGroupController.js
@@ -1,4 +1,62 @@
 const HospitalGroup = require('../models/HospitalGroup');
+const config = require('../config/config');
+const { body, validationResult } = require('express-validator');
+const sequelize = require('../database/connection');
+const bcrypt = require('bcrypt');
+const jwt = require('jsonwebtoken');
+
+
+exports.loginValidationRules = () => {
+  return [
+    body('SysUserName').notEmpty().withMessage('Username is required'),
+    body('SysUserPwd').notEmpty().withMessage('Password is required')
+  ];
+};
+
+exports.login = async (req, res) => {
+  const errors = validationResult(req);
+  if (!errors.isEmpty()) {
+    return res.status(400).json({ errors: errors.array() });
+  }
+
+  const { SysUserName, SysUserPwd } = req.body;
+
+  try {
+    // Use parameterized queries to prevent SQL injection
+    const [user] = await sequelize.query(
+      `SELECT * FROM tblsysuser WHERE SysUserName = ? AND Active = ?`,
+      {
+        replacements: [SysUserName, 'true'], // Treat 'Active' as a string
+        type: sequelize.QueryTypes.SELECT
+      }
+    );
+
+    console.log('User:', user);
+
+    // Check if user exists
+    if (!user) {
+      return res.status(401).json({ message: 'Invalid username or password' });
+    }
+
+    // Compare passwords (bcrypt manages the salt internally)
+    const isPasswordValid = await bcrypt.compare(SysUserPwd, user.SysUserPwd);
+    if (!isPasswordValid) {
+      return res.status(401).json({ message: 'Invalid username or password' });
+    }
+
+    // Generate authentication token
+    const authenticationToken = jwt.sign(
+      { userId: user.SysUserID, userType: user.UserType },
+      process.env.SUPERCLIENTSECRET,
+      { expiresIn: '24h' }
+    );
+
+    res.json({ token: authenticationToken });
+  } catch (error) {
+    console.error('Error during login:', error);
+    res.status(500).json({ message: 'An unexpected error occurred' });
+  }
+};
 
 exports.createHospitalGroup = async (req, res) => {
   try {
@@ -85,9 +143,16 @@ exports.getHospitalGroupById = async (req, res) => {
 exports.updateHospitalGroup = async (req, res) => {
   const id = req.params.id;
   try {
-    const [updatedRows] = await HospitalGroup.update(req.body, {
-      where: { HospitalGroupID: id }
-    });
+    // Exclude HospitalGroupID from being updated
+    const { HospitalGroupName, LicensedHospitalCount } = req.body;
+    
+    const [updatedRows] = await HospitalGroup.update(
+      { HospitalGroupName, LicensedHospitalCount },
+      {
+        where: { HospitalGroupID: id }
+      }
+    );
+
     if (updatedRows === 0) {
       res.status(404).json({
         meta: {
@@ -121,6 +186,7 @@ exports.updateHospitalGroup = async (req, res) => {
     });
   }
 };
+
 
 exports.deleteHospitalGroup = async (req, res) => {
   const id = req.params.id;
