# routes/hospitalGroupRoutes.js
@@ -2,6 +2,7 @@
 
 const express = require('express');
 const router = express.Router();
+const { verifyToken } = require('../Middleware/authMiddleware');
 
 // /**
 //  * @swagger
@@ -37,10 +38,12 @@ const router = express.Router();
 
 const hospitalGroupController = require('../controllers/hospitalGroupController');
 
-router.post('/hospital-groups', hospitalGroupController.createHospitalGroup);
-router.get('/hospital-groups', hospitalGroupController.getAllHospitalGroups);
-router.get('/hospital-groups/:id', hospitalGroupController.getHospitalGroupById);
-router.put('/hospital-groups/:id', hospitalGroupController.updateHospitalGroup);
-router.delete('/hospital-groups/:id', hospitalGroupController.deleteHospitalGroup);
+router.post('/admin/login', hospitalGroupController.loginValidationRules(),hospitalGroupController.login,)
+
+router.post('/hospital-groups',verifyToken(['admin']),hospitalGroupController.createHospitalGroup);
+router.get('/hospital-groups',verifyToken(['admin']), hospitalGroupController.getAllHospitalGroups);
+router.get('/hospital-groups/:id',verifyToken(['admin']), hospitalGroupController.getHospitalGroupById);
+router.put('/hospital-groups/:id', verifyToken(['admin']),hospitalGroupController.updateHospitalGroup);
+router.delete('/hospital-groups/:id',verifyToken(['admin']), hospitalGroupController.deleteHospitalGroup);
 
 module.exports = router;
